--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,16 +6,17 @@ x-airflow-common:
   environment:
     &airflow-common-env
     AIRFLOW__CORE__EXECUTOR: CeleryExecutor
-    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2-binary://airflow:airflow@postgres/airflow
-    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2-binary://airflow:airflow@postgres/airflow
-    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://airflow:airflow@postgres/airflow
+    AIRFLOW__DATABASE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASSWORD}@postgres_airflow/${AIRFLOW_DB_NAME}
+    AIRFLOW__CORE__SQL_ALCHEMY_CONN: postgresql+psycopg2://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASSWORD}@postgres_airflow/${AIRFLOW_DB_NAME}
+    AIRFLOW__CELERY__RESULT_BACKEND: db+postgresql://${AIRFLOW_DB_USER}:${AIRFLOW_DB_PASSWORD}@postgres_airflow/${AIRFLOW_DB_NAME}
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
     AIRFLOW__SCHEDULER__ENABLE_HEALTH_CHECK: 'true'
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:-}
+    RUNNING_IN_DOCKER: ${RUNNING_IN_DOCKER}
   volumes:
     - ./airflow/dags:/opt/airflow/dags
     - ./airflow/logs:/opt/airflow/logs
@@ -40,14 +41,18 @@ services:
     ports:
       - 8080:8080
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     environment:
-    - RUNNING_IN_DOCKER=true
+      - RUNNING_IN_DOCKER=${RUNNING_IN_DOCKER}
     restart: always
+    healthcheck:
+      test: ["CMD", "curl", "--fail", "http://localhost:8080/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   postgres:
-      image: postgres:latest
+      image: postgres:15
       environment:
         POSTGRES_USER: ${POSTGRES_USER}
         POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -75,14 +80,13 @@ services:
     ports:
       - 8501:8501 # Assuming you want to run the scoreboard on a different port
     depends_on:
-      postgres:
-        condition: service_healthy
+      - postgres
     restart: always
     environment:
-    - RUNNING_IN_DOCKER=true
+    - RUNNING_IN_DOCKER=${RUNNING_IN_DOCKER}
 
   postgres_airflow:
-    image: postgres:lastest
+    image: postgres:15
     environment:
       POSTGRES_USER: ${POSTGRES_USER_AIRFLOW}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD_AIRFLOW}
@@ -97,7 +101,7 @@ services:
     restart: always
 
   redis:
-    image: redis:latest
+    image: redis:7.0
     expose:
       - 6379
     healthcheck:
@@ -112,7 +116,7 @@ services:
     <<: *airflow-common
     command: webserver
     ports:
-      - "8070:8070"
+      - "8070:8080"
     healthcheck:
       test: ["CMD", "curl", "--fail", "http://localhost:8070/health"]
       interval: 30s
